[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mymlpackage"
version = "0.0.1"
description = "Package for volterra CPD model fitting"
readme = "README.md"
authors = [{ name="Ruben Wijnands", email="R.Wijnands@tudelft.nl" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scikit-learn"
]