[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "higher-order-ml-package"
version = "0.1.0"
description = "Higher-order machine learning using Canonical Polyadic Decomposition for Volterra series modeling"
readme = "README.md"
authors = [{ name="Ruben Wijnands", email="rubenwijnands999@gmail.com" }]
license = "MIT"
keywords = ["machine learning", "tensor decomposition", "volterra series", "cpd", "higher-order interactions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "networkx>=2.5",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/rubenwijnands999/PhD-package"
"Bug Tracker" = "https://github.com/rubenwijnands999/PhD-package/issues"
"Documentation" = "https://github.com/rubenwijnands999/PhD-package/blob/main/README.md"
"Repository" = "https://github.com/rubenwijnands999/PhD-package"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
examples = [
    "jupyter>=1.0.0",
    "seaborn>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["higher_order_ML_package*"]
exclude = ["tests*", "examples*"]